<resources>

    <!-- General strings -->
    <string name="app_name">MyMedic</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="not_completed">Not completed</string>

    <!-- Launcher -->
    <string name="welcome_anonymous_user">Welcome!</string>
    <string name="welcome_authenticated_user">Welcome, %1$s!</string>

    <!-- Authentication -->
    <string name="invalid_password">Password must contain at least 8 characters</string>
    <string name="invalid_email">The email address is incorrect</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register_now">Register now</string>
    <string name="registration_success_with_confirmation_sent">A confirmation email has been sent to your address</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="registration_passwords_not_match">Passwords don\'t match</string>
    <string name="sign_up">Sign up</string>

    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="invalid_name">The name is not valid</string>
    <string name="already_registered">I am already registered!</string>

    <string name="password_reset_string">Please enter your email address below. We\'ll send an mail to reset your password to the specified address :</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_email_sent">An email has been sent to reset your password</string>
    <string name="email_not_found">Email address not found</string>

    <!-- Main navigation -->
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="medical_record">Medical record</string>

    <!-- General states -->
    <string name="no_results_found">No results found</string>
    <string name="something_went_wrong_try_again">Something went wrong. Check your connection and try again.</string>
    <string name="retry">Retry</string>

    <!-- Medics search -->
    <string name="search_select_medical_specialty">Please select the medical specialty that you need</string>
    <string name="medic_name">Medic name</string>
    <string name="could_not_retrieve_medics">Could not retrieve medics</string>

    <!-- New appointment -->
    <string name="enter_appointment_details">Please enter the details for your appointment :</string>
    <string name="medical_specialty">Medical specialty</string>
    <string name="press_to_select_date">Press to select date</string>
    <string name="medical_appointment_details_needed">Please provide some optional details about the reason you need this medical appointment (symptoms etc.). This will help the medic with the medical examination.</string>
    <string name="details">Details</string>
    <string name="request_appointment">Request appointment</string>
    <string name="invalid_date">No date given or invalid date</string>
    <string name="appointment_created">Your appointment request was sent successfully</string>
    <string name="no_internet_appointment_will_be_created">You have no internet now, but the appointment will be created once you get online</string>

    <!-- Incoming appointments -->
    <string name="incoming_patients">Incoming patients : </string>
    <string name="appointment_canceled">The appointment has been canceled</string>
    <string name="your_appointments">Your appointments :</string>
    <string name="cancel">Cancel</string>
    <string name="awaiting">Awaiting</string>
    <string name="confirmed">Confirmed</string>
    <string name="rejected">Rejected</string>
    <string name="canceled">Canceled</string>

    <!-- Awaiting appointments -->
    <string name="new_appointment_request">New request</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="appointment_updated_successfully">Appointment has been updated</string>
    <string name="no_internet_appointment_will_be_updated">You have no internet now, but he appointment will be updated once you get online</string>
    <string name="cancel_reason">Please provide a reason for the appointment cancelation</string>
    <string name="ok">OK</string>
    <string name="reason_cannot_be_empty">The reason cannot be empty</string>

    <!-- Chat -->
    <string name="no_conversations">You have no conversations yet</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="no_messages">This is the beginning of your conversation</string>

    <!-- Profile -->
    <string name="edit">Edit</string>
    <string name="change_photo">Change photo</string>
    <string name="update">Update</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="password_update_success">The password has been updated</string>
    <string name="edit_profile">Edit profile</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">New password confirmation</string>

    <!-- Settings -->
    <string name="enable_messages_notifications">Enable messages notifications. You will receive push notifications when you get a new message.</string>
    <string name="enable_appointments_notifications">Enable appointments notifications. You will receive push notifications when you appointments are updated.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>

    <!-- Medical history -->
    <string name="past_appointments">Past/ cancelled appointments : </string>
    <string name="past_patients">Past/ cancelled patients : </string>

    <!-- Appointment details -->
    <string name="appointment_details">Details</string>
    <string name="datetime">Datetime : </string>
    <string name="patient_name">Patient name : </string>
    <string name="medic_name_appointment_details">Medic name : </string>
    <string name="medical_specialty_appointment_details">Medical specialty :</string>
    <string name="description">Description :</string>
    <string name="cancelation_reason">Cancelation reason :</string>

    <string-array name="medical_record_patient_options">
        <item>Search</item>
        <item>Appointments</item>
        <item>History</item>
    </string-array>

    <string-array name="medical_record_medic_options">
        <item>Awaiting</item>
        <item>Appointments</item>
        <item>Personal</item>
        <item>History</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Not completed</item>
    </string-array>
</resources>
