<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/rounded_corner_transparent_blue"
        android:orientation="vertical"
        android:padding="@dimen/primary_margin">

        <TextView
            android:id="@+id/new_appointment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_appointment_request"
            android:textColor="@color/light_green"
            android:textSize="@dimen/highlight_text_size"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appointment_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/alert_text_size"
            app:layout_constraintTop_toBottomOf="@id/new_appointment_text"
            tools:text="Created by : Popescu Ion" />

        <TextView
            android:id="@+id/appointment_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/alert_text_size"
            app:layout_constraintTop_toBottomOf="@id/appointment_author"
            tools:text="Date : 12.10.2018" />

        <Button
            android:id="@+id/confirm_appoitment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:text="@string/confirm"
            android:textColor="@color/light_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appointment_time" />

        <Button
            android:id="@+id/reject_appointment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:text="@string/reject"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/confirm_appoitment_button"
            app:layout_constraintTop_toBottomOf="@id/appointment_time" />

    </android.support.constraint.ConstraintLayout>
</layout>