<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.catalin.mymedic.feature.authentication.passwordreset.PasswordResetViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/primary_margin"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                android:text="@string/password_reset_string"
                android:textSize="@dimen/alert_text_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_reset_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/primary_margin"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_reset_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/primary_margin"
                    android:drawableStart="@drawable/ic_mail_24dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    app:drawableTint="@{@color/light_gray}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/password_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/primary_margin"
                android:background="@drawable/rounded_corner_button"
                android:onClick="@{() -> viewModel.sendPasswordResetEmail()}"
                android:paddingEnd="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin"
                android:text="@string/reset_password"
                android:textColor="@color/white" />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>