<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.catalin.mymedic.feature.createappointment.AppointmentCreateViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/primary_margin"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                android:text="@string/enter_appointment_details"
                android:textSize="@dimen/highlight_text_size" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/secondary_margin"
                android:layout_marginStart="@dimen/secondary_margin"
                android:layout_marginTop="@dimen/primary_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/medic_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/primary_margin"
                    android:drawableStart="@drawable/ic_person_24dp"
                    android:enabled="false"
                    android:hint="@string/medic_name"
                    app:drawableTint="@{@color/gray}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/secondary_margin"
                android:layout_marginStart="@dimen/secondary_margin"
                android:layout_marginTop="@dimen/primary_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/section_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:hint="@string/medical_specialty" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/secondary_margin"
                android:layout_marginStart="@dimen/secondary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/primary_margin"
                    android:drawableStart="@drawable/ic_date_range_24dp"
                    app:drawableTint="@{@color/gray}" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginEnd="@dimen/secondary_margin"
                android:layout_marginStart="@dimen/secondary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/medical_appointment_details_needed"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>