<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/messages_notifications_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/primary_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/second_key_line"
                android:text="@string/enable_messages_notifications"
                android:textSize="@dimen/alert_text_size" />

            <Switch
                android:id="@+id/messages_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />

        </FrameLayout>

        <View
            android:id="@+id/messages_frame_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/messages_notifications_frame" />

        <FrameLayout
            android:id="@+id/appointments_notifications_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/primary_margin"
            app:layout_constraintTop_toBottomOf="@id/messages_frame_divider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/second_key_line"
                android:text="@string/enable_appointments_notifications"
                android:textSize="@dimen/alert_text_size" />

            <Switch
                android:id="@+id/appointments_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />

        </FrameLayout>

        <View
            android:id="@+id/appointments_frame_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/appointments_notifications_frame" />

        <TextView
            android:id="@+id/privacy_policy_information"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_option_height"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/primary_margin"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/alert_text_size"
            app:layout_constraintTop_toBottomOf="@id/appointments_frame_divider" />

        <View
            android:id="@+id/privacy_policy_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_information" />

        <TextView
            android:id="@+id/about_us_information"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_option_height"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/primary_margin"
            android:text="@string/about_us"
            android:textSize="@dimen/alert_text_size"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_divider" />

        <View
            android:id="@+id/about_us_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/about_us_information" />

        <TextView
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_option_height"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/primary_margin"
            android:text="@string/log_out"
            android:textSize="@dimen/alert_text_size"
            app:layout_constraintTop_toBottomOf="@id/about_us_divider" />


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/log_out"
            app:layout_constraintVertical_bias="1"
            android:layout_marginBottom="@dimen/primary_margin"
            android:background="@drawable/ic_application_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

    </android.support.constraint.ConstraintLayout>
</layout>