<?xml version="1.0" encoding="utf-8"?>
<layout>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/secondary_margin"
            android:layout_marginStart="@dimen/secondary_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/primary_margin"
                android:drawableStart="@drawable/ic_person_24dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:lines="1"
                app:drawableTint="@{@color/light_gray}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/secondary_margin"
            android:layout_marginStart="@dimen/secondary_margin"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/first_name_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/primary_margin"
                android:drawableStart="@drawable/ic_person_24dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:lines="1"
                app:drawableTint="@{@color/light_gray}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/birth_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/secondary_margin"
            android:layout_marginStart="@dimen/secondary_margin"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/password_confirmation_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birth_date_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/primary_margin"
                android:drawableStart="@drawable/ic_date_range_24dp"
                android:hint="@string/birth_date"
                android:lines="1"
                app:drawableTint="@{@color/light_gray}" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</layout>