<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--suppress AndroidUnknownAttribute -->
    <data class=".AppointmentDetailsBinding">

        <variable
            name="viewModel"
            type="com.catalin.mymedic.feature.appointmentdetails.AppointmentDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/primary_margin">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_application_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/datetime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/primary_margin"
                android:text="@string/datetime"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/app_logo" />

            <TextView
                android:id="@+id/datetime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/primary_margin"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintStart_toEndOf="@id/datetime_label"
                app:layout_constraintTop_toBottomOf="@id/app_logo"
                app:longDate="@{viewModel.appointment.dateTime}"
                tools:text="12.10.2010" />

            <TextView
                android:id="@+id/patient_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/patient_name"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/datetime_label" />

            <TextView
                android:id="@+id/patient_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.appointment.patientName}"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintStart_toEndOf="@id/patient_name_label"
                app:layout_constraintTop_toBottomOf="@id/datetime_value"
                tools:text="Popescu Ion" />

            <TextView
                android:id="@+id/medic_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/medic_name_appointment_details"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/patient_name_label" />

            <TextView
                android:id="@+id/medic_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.appointment.medicName}"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintStart_toEndOf="@id/medic_name_label"
                app:layout_constraintTop_toBottomOf="@id/patient_name_value"
                tools:text="George Vasile" />

            <TextView
                android:id="@+id/medical_specialty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/medical_specialty_appointment_details"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/medic_name_label" />

            <TextView
                android:id="@+id/medical_specialty_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.appointment.specialtyName}"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintStart_toEndOf="@id/medical_specialty_label"
                app:layout_constraintTop_toBottomOf="@id/medic_name_value"
                tools:text="Cardiology" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/description"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/medical_specialty_label" />

            <TextView
                android:id="@+id/description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.appointment.description}"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintTop_toBottomOf="@id/description_label"
                tools:text="this is some description dasd adasda das dafasd ad sadaf sda dafas dadsa fafas dasd a" />

            <TextView
                android:id="@+id/cancelation_reason_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/cancelation_reason"
                android:textSize="@dimen/alert_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/description_value"
                app:visibleGone="@{viewModel.canceledAppointment}" />

            <TextView
                android:id="@+id/cancelation_reason_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{viewModel.appointmentCancelationReason.reason}"
                android:textSize="@dimen/alert_text_size"
                app:layout_constraintTop_toBottomOf="@id/cancelation_reason_label"
                app:visibleGone="@{viewModel.canceledAppointment}"
                tools:text="this is some description dasd adasda das dafasd ad sadaf sda dafas dadsa fafas dasd a" />


            <ImageButton
                android:id="@+id/message_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginTop="@dimen/primary_margin"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_chat_24dp"
                android:tint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cancelation_reason_value"
                tools:ignore="ContentDescription" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>